--- a/trunk/ddscanner/app/src/main/res/layout/activity_login_to_continue.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_login_to_continue.xml
@@ -9,8 +9,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
     <RelativeLayout
         android:id="@+id/login_view_first"
         android:gravity="center"
