--- a/trunk/ddscanner/app/src/main/res/layout/item_achievment_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_achievment_profile.xml
@@ -6,7 +6,8 @@
     android:layout_margin="5dp"
     android:background="@drawable/achievemnt_item_profile_background"
     android:gravity="center_vertical"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:foreground="?android:attr/selectableItemBackground">
 
     <TextView
         android:id="@+id/title"
