--- a/trunk/ddscanner/app/src/main/res/layout/item_photo_liked.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_photo_liked.xml
@@ -42,7 +42,7 @@
                 android:layout_marginTop="14dp"
                 android:orientation="horizontal">
 
-                <TextView
+                <com.klinker.android.link_builder.LinkConsumableTextView
                     android:layout_centerVertical="true"
                     android:layout_marginRight="12dp"
                     android:layout_toLeftOf="@+id/photo_layout"
