--- a/trunk/ddscanner/app/src/main/res/layout/item_review_liked_likes_activity.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_review_liked_likes_activity.xml
@@ -40,7 +40,7 @@
                 android:layout_marginTop="14dp"
                 android:orientation="vertical">
 
-                <TextView
+                <com.klinker.android.link_builder.LinkConsumableTextView
                     android:id="@+id/text"
                     android:layout_marginRight="14dp"
                     android:layout_width="wrap_content"
@@ -55,19 +55,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="7dp">
-
-                    <TextView
-                        android:id="@+id/whoDisliked"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="#a3a3a3"
-                        android:textSize="13sp"
-                        tools:text="Disliked by Cameron Dias"
-                        android:layout_toLeftOf="@+id/timeAgo"
-                        android:layout_alignParentLeft="true"
-                        android:lines="1"
-                        android:ellipsize="end"
-                        app:likedTextFrom="@{likeViewModel}"/>
 
                     <TextView
                         android:id="@+id/timeAgo"
