--- a/trunk/ddscanner/app/src/main/res/layout/activity_login_to_continue.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_login_to_continue.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout android:orientation="vertical"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <include layout="@layout/view_toolbar" />
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <VideoView
+        android:fitsSystemWindows="true"
+        android:foreground="#80000000"
+        android:id="@+id/video_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"/>
     <RelativeLayout
         android:id="@+id/login_view_first"
         android:gravity="center"
@@ -51,4 +61,4 @@
             android:text="@string/login"
             style="@style/BlueButton" />
     </RelativeLayout>
-</LinearLayout>
+</RelativeLayout>
