--- a/trunk/ddscanner/app/src/main/res/layout/dive_spot_photos_list_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/dive_spot_photos_list_item.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginRight="5dp"
-    android:layout_marginBottom="10dp">
+    android:layout_marginBottom="10dp"
+    android:foreground="?android:attr/selectableItemBackground">
     <cn.gavinliu.android.lib.shapedimageview.ShapedImageView
         app:shape_mode="round_rect"
         app:round_radius="@dimen/photos_radius"
