--- a/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
@@ -622,7 +622,7 @@
                         </RelativeLayout>
 
 
-                        <LinearLayout
+                        <RelativeLayout
                             android:id="@+id/about_dss_layout"
                             android:layout_width="match_parent"
                             android:layout_height="55dp"
@@ -631,11 +631,13 @@
                             android:orientation="horizontal">
 
                             <ImageView
+                                android:id="@+id/about_icon"
                                 android:layout_marginTop="0dp"
                                 style="@style/CharacteristicsDiveSpotListIcons"
                                 android:src="@drawable/ic_profile_about" />
 
                             <TextView
+                                android:layout_toRightOf="@+id/about_icon"
                                 style="@style/CharacteristicsDiveSpotListTitle"
                                 android:layout_width="258dp"
                                 android:layout_height="match_parent"
@@ -643,6 +645,34 @@
                                 android:gravity="center_vertical"
                                 android:text="@string/about_dds"
                                 />
+                            <ImageView
+                                android:layout_alignParentBottom="true"
+                                style="@style/DividerStyle" />
+                        </RelativeLayout>
+                        <LinearLayout
+                            android:id="@+id/share_dss_layout"
+                            android:layout_width="match_parent"
+                            android:layout_height="55dp"
+                            android:background="?attr/selectableItemBackground"
+                            android:onClick="@{handlers::shareApp}"
+                            android:orientation="horizontal">
+
+                            <ImageView
+                                android:layout_marginTop="0dp"
+                                style="@style/CharacteristicsDiveSpotListIcons"
+                                android:src="@drawable/ic_profile_share" />
+
+                            <TextView
+                                style="@style/CharacteristicsDiveSpotListTitle"
+                                android:layout_width="258dp"
+                                android:layout_height="match_parent"
+                                android:fontFamily="sans-serif-medium"
+                                android:gravity="center_vertical"
+                                android:text="@string/share_app"
+                                />
+                            <ImageView
+                                android:layout_alignParentBottom="true"
+                                style="@style/DividerStyle" />
                         </LinearLayout>
                     </LinearLayout>
                     <ImageView
