--- a/trunk/ddscanner/app/src/main/res/layout/activity_dive_centers.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_dive_centers.xml
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.google.android.gms.maps.MapView
+        <com.mapbox.mapboxsdk.maps.MapView
             android:id="@+id/mapView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
