--- a/trunk/ddscanner/app/src/main/res/layout/view_divecenter_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_divecenter_profile.xml
@@ -459,7 +459,7 @@
                             android:text="@string/edit_profile" />
                     </RelativeLayout>
 
-                    <ImageView style="@style/DividerStyleFull" />
+                    <ImageView style="@style/DividerStyle" />
 
                     <RelativeLayout
                         android:id="@+id/logout"
@@ -487,7 +487,7 @@
                             style="@style/DividerStyle"
                             android:layout_alignParentBottom="true" />
                     </RelativeLayout>
-                    <LinearLayout
+                    <RelativeLayout
                         android:id="@+id/about_dss_layout"
                         android:layout_width="match_parent"
                         android:layout_height="55dp"
@@ -496,9 +496,36 @@
                         android:orientation="horizontal">
 
                         <ImageView
+                            android:id="@+id/about_icon"
                             android:layout_marginTop="0dp"
                             style="@style/CharacteristicsDiveSpotListIcons"
                             android:src="@drawable/ic_profile_about" />
+
+                        <TextView
+                            android:layout_toRightOf="@+id/about_icon"
+                            style="@style/CharacteristicsDiveSpotListTitle"
+                            android:layout_width="258dp"
+                            android:layout_height="match_parent"
+                            android:fontFamily="sans-serif-medium"
+                            android:gravity="center_vertical"
+                            android:text="@string/about_dds"
+                            />
+                        <ImageView
+                            style="@style/DividerStyle"
+                            android:layout_alignParentBottom="true" />
+                    </RelativeLayout>
+                    <LinearLayout
+                        android:id="@+id/share_dss_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="55dp"
+                        android:background="?attr/selectableItemBackground"
+                        android:onClick="@{handlers::shareApp}"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_marginTop="0dp"
+                            style="@style/CharacteristicsDiveSpotListIcons"
+                            android:src="@drawable/ic_profile_share" />
 
                         <TextView
                             style="@style/CharacteristicsDiveSpotListTitle"
@@ -506,7 +533,7 @@
                             android:layout_height="match_parent"
                             android:fontFamily="sans-serif-medium"
                             android:gravity="center_vertical"
-                            android:text="@string/about_dds"
+                            android:text="@string/share_app"
                             />
                     </LinearLayout>
                 </LinearLayout>
