--- a/trunk/ddscanner/app/src/main/res/layout/activity_login_to_continue.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_login_to_continue.xml
@@ -14,7 +14,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="false">
-
             <VideoView
                 android:id="@+id/video_view"
                 android:layout_width="match_parent"
@@ -87,6 +86,14 @@
                     android:layout_marginRight="25dp"
                     android:layout_marginTop="13dp"
                     android:text="@string/login" />
+                <ImageView
+                    android:visibility="gone"
+                    android:id="@+id/close_button"
+                    android:layout_alignParentRight="true"
+                    android:padding="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_ac_close"/>
             </RelativeLayout>
         </RelativeLayout>
     </android.support.design.widget.AppBarLayout>
