--- a/trunk/ddscanner/app/src/main/res/layout/activity_dive_centers.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_dive_centers.xml
@@ -27,63 +27,11 @@
             app:mapbox_styleUrl="mapbox://styles/lashket/cj6ncymbk0n4k2rn2737xijrb"
             />
 
-        <RelativeLayout
-            android:visibility="gone"
+        <com.ddscanner.ui.views.MapControlView
             android:id="@+id/map_control_layout"
-            android:layout_gravity="center_vertical"
+            android:layout_gravity="center_vertical|right"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="15dp">
-
-            <ImageView
-                android:id="@+id/zoom_plus"
-                android:layout_width="38dp"
-                android:layout_height="38dp"
-                android:layout_alignParentRight="true"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/background_map_tools"
-                android:padding="10dp"
-                android:src="@drawable/ic_zoom_plus" />
-
-            <ImageView
-                android:id="@+id/zoom_minus"
-                android:layout_width="38dp"
-                android:layout_height="38dp"
-                android:layout_alignParentRight="true"
-                android:layout_below="@+id/zoom_plus"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/background_map_tools"
-                android:padding="10dp"
-                android:src="@drawable/ic_zoom_minus" />
-
-            <RelativeLayout
-                android:layout_width="38dp"
-                android:layout_height="38dp"
-                android:layout_alignParentRight="true"
-                android:layout_below="@+id/zoom_minus"
-                android:layout_marginTop="23dp"
-                android:background="@drawable/background_map_tools">
-                <ImageView
-                    android:id="@+id/go_to_my_location"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:padding="10dp"
-                    android:src="@drawable/ic_my_location" />
-                <com.rey.material.widget.ProgressView
-                    android:visibility="gone"
-                    android:id="@+id/progressBar"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_centerInParent="true"
-                    app:pv_autostart="true"
-                    app:pv_circular="true"
-                    app:pv_progressMode="indeterminate"
-                    app:pv_progressStyle="@style/CircularProgress" />
-            </RelativeLayout>
-
-        </RelativeLayout>
+            android:layout_height="wrap_content"/>
 
         <com.ddscanner.ui.views.DiveCenterInfoView
             android:layout_gravity="bottom"
