--- a/trunk/ddscanner/app/src/main/res/layout/activity_pick_location.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_pick_location.xml
@@ -104,7 +104,11 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_centerInParent="true" />
-
+            <com.ddscanner.ui.views.MapControlView
+                android:id="@+id/map_control_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"/>
         </RelativeLayout>
 
 
