--- a/trunk/ddscanner/app/src/main/res/layout/slider_image_fragment.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/slider_image_fragment.xml
@@ -9,7 +9,7 @@
     android:layout_height="match_parent"
     android:layout_gravity="center">
 
-    <com.ddscanner.ui.views.ScallingImageView
+    <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/slider_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
