--- a/trunk/ddscanner/app/src/main/res/layout/view_input_phone_layout.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_input_phone_layout.xml
@@ -22,7 +22,7 @@
         android:id="@+id/edit_text"
         android:maxLength="19"
         android:layout_width="match_parent"
-        android:layout_height="34dp"
+        android:layout_height="33dp"
         android:textSize="15sp"
         android:hint="@string/phone"
         android:inputType="phone"
@@ -31,6 +31,7 @@
         android:paddingRight="15dp"
         />
         <ImageView
+            android:visibility="gone"
             android:id="@+id/ic_delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -42,7 +43,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#dedede"
-            android:layout_alignParentBottom="true"/>
+            android:layout_below="@+id/edit_text"/>
 
     </RelativeLayout>
     <TextView
