+ dialog if there are no dive centers

--- a/trunk/ddscanner/app/src/main/res/values/colors.xml
+++ b/trunk/ddscanner/app/src/main/res/values/colors.xml
@@ -93,4 +93,6 @@
 
     <color name="divider_error_color">#e74b1a</color>
 
+    <color name="text_inactive_button">#80202020</color>
+
 </resources>
