--- a/trunk/ddscanner/app/src/main/res/values/attrs.xml
+++ b/trunk/ddscanner/app/src/main/res/values/attrs.xml
@@ -24,7 +24,7 @@
         <attr name="edit_text_text" format="string" />
     </declare-styleable>
 
-    <declare-styleable name="ContentBlockLayout">
+    <declare-styleable name="ContentBlockLinearLayout">
         <attr name="top_divider" format="boolean" />
         <attr name="bottom_divider" format="boolean" />
 
