--- a/trunk/ddscanner/app/src/main/res/layout/activity_edit_dive_center_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_edit_dive_center_profile.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <com.ddscanner.ui.views.ContentBlockLayout
+            <com.ddscanner.ui.views.ContentBlockLinearLayout
                 android:id="@+id/logo_block"
                 android:layout_width="match_parent"
                 android:layout_height="58dp"
@@ -43,9 +43,9 @@
                     android:textColor="#3b518b"
                     android:textSize="14sp"
                     android:textStyle="normal" />
-            </com.ddscanner.ui.views.ContentBlockLayout>
+            </com.ddscanner.ui.views.ContentBlockLinearLayout>
 
-            <com.ddscanner.ui.views.ContentBlockLayout
+            <com.ddscanner.ui.views.ContentBlockLinearLayout
                 android:id="@+id/general_info_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -140,9 +140,9 @@
                     android:textSize="12sp"
                     android:textStyle="normal"
                     android:text="Provide your address to be shown on the map" />
-            </com.ddscanner.ui.views.ContentBlockLayout>
+            </com.ddscanner.ui.views.ContentBlockLinearLayout>
 
-            <com.ddscanner.ui.views.ContentBlockLayout
+            <com.ddscanner.ui.views.ContentBlockLinearLayout
                 android:id="@+id/account_type"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -188,9 +188,9 @@
                     android:textColor="#333333"
                     android:textSize="16sp"
                     android:textStyle="normal" />
-            </com.ddscanner.ui.views.ContentBlockLayout>
+            </com.ddscanner.ui.views.ContentBlockLinearLayout>
 
-            <com.ddscanner.ui.views.ContentBlockLayout
+            <com.ddscanner.ui.views.ContentBlockLinearLayout
                 android:id="@+id/dive_spots_block"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -230,9 +230,9 @@
                     android:textColor="#3b518b"
                     android:textSize="14sp"
                     android:textStyle="normal" />
-            </com.ddscanner.ui.views.ContentBlockLayout>
+            </com.ddscanner.ui.views.ContentBlockLinearLayout>
 
-            <com.ddscanner.ui.views.ContentBlockLayout
+            <com.ddscanner.ui.views.ContentBlockLinearLayout
                 android:id="@+id/languages_block"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -271,9 +271,9 @@
                     android:textColor="#3b518b"
                     android:textSize="14sp"
                     android:textStyle="normal" />
-            </com.ddscanner.ui.views.ContentBlockLayout>
+            </com.ddscanner.ui.views.ContentBlockLinearLayout>
 
-            <com.ddscanner.ui.views.ContentBlockLayout
+            <com.ddscanner.ui.views.ContentBlockLinearLayout
                 android:id="@+id/associations_block"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -312,9 +312,9 @@
                     android:textColor="#3b518b"
                     android:textSize="14sp"
                     android:textStyle="normal" />
-            </com.ddscanner.ui.views.ContentBlockLayout>
+            </com.ddscanner.ui.views.ContentBlockLinearLayout>
 
-            <com.ddscanner.ui.views.ContentBlockLayout
+            <com.ddscanner.ui.views.ContentBlockLinearLayout
                 android:id="@+id/brands_block"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -353,9 +353,9 @@
                     android:textColor="#3b518b"
                     android:textSize="14sp"
                     android:textStyle="normal" />
-            </com.ddscanner.ui.views.ContentBlockLayout>
+            </com.ddscanner.ui.views.ContentBlockLinearLayout>
 
-            <com.ddscanner.ui.views.ContentBlockLayout
+            <com.ddscanner.ui.views.ContentBlockLinearLayout
                 android:id="@+id/change_password_block"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -378,7 +378,7 @@
                     android:textStyle="normal"
                     android:textAllCaps="true"
                     android:text="@string/change_password_edit" />
-            </com.ddscanner.ui.views.ContentBlockLayout>
+            </com.ddscanner.ui.views.ContentBlockLinearLayout>
         </android.support.constraint.ConstraintLayout>
     </LinearLayout>
 </ScrollView>
