--- a/trunk/ddscanner/app/src/main/res/layout/fragment_dive_center_edit_layout.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_dive_center_edit_layout.xml
@@ -7,7 +7,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <com.ddscanner.ui.views.ContentBlockLayout
+            <com.ddscanner.ui.views.ContentBlockLinearLayout
                 android:id="@+id/logo_block"
                 android:layout_width="match_parent"
                 android:layout_height="58dp"
@@ -34,9 +34,9 @@
                     android:textColor="#3b518b"
                     android:textSize="14sp"
                     android:textStyle="normal" />
-            </com.ddscanner.ui.views.ContentBlockLayout>
+            </com.ddscanner.ui.views.ContentBlockLinearLayout>
 
-            <com.ddscanner.ui.views.ContentBlockLayout
+            <com.ddscanner.ui.views.ContentBlockLinearLayout
                 android:id="@+id/general_info_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -133,9 +133,9 @@
                     android:textSize="12sp"
                     android:textStyle="normal"
                     android:text="Provide your address to be shown on the map" />
-            </com.ddscanner.ui.views.ContentBlockLayout>
+            </com.ddscanner.ui.views.ContentBlockLinearLayout>
 
-            <com.ddscanner.ui.views.ContentBlockLayout
+            <com.ddscanner.ui.views.ContentBlockLinearLayout
                 android:id="@+id/account_type"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -181,9 +181,9 @@
                     android:textColor="#333333"
                     android:textSize="16sp"
                     android:textStyle="normal" />
-            </com.ddscanner.ui.views.ContentBlockLayout>
+            </com.ddscanner.ui.views.ContentBlockLinearLayout>
 
-            <com.ddscanner.ui.views.ContentBlockLayout
+            <com.ddscanner.ui.views.ContentBlockLinearLayout
                 android:id="@+id/dive_spots_block"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -223,9 +223,9 @@
                     android:textColor="#3b518b"
                     android:textSize="14sp"
                     android:textStyle="normal" />
-            </com.ddscanner.ui.views.ContentBlockLayout>
+            </com.ddscanner.ui.views.ContentBlockLinearLayout>
 
-            <com.ddscanner.ui.views.ContentBlockLayout
+            <com.ddscanner.ui.views.ContentBlockLinearLayout
                 android:id="@+id/languages_block"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -264,9 +264,9 @@
                     android:textColor="#3b518b"
                     android:textSize="14sp"
                     android:textStyle="normal" />
-            </com.ddscanner.ui.views.ContentBlockLayout>
+            </com.ddscanner.ui.views.ContentBlockLinearLayout>
 
-            <com.ddscanner.ui.views.ContentBlockLayout
+            <com.ddscanner.ui.views.ContentBlockLinearLayout
                 android:id="@+id/associations_block"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -305,9 +305,9 @@
                     android:textColor="#3b518b"
                     android:textSize="14sp"
                     android:textStyle="normal" />
-            </com.ddscanner.ui.views.ContentBlockLayout>
+            </com.ddscanner.ui.views.ContentBlockLinearLayout>
 
-            <com.ddscanner.ui.views.ContentBlockLayout
+            <com.ddscanner.ui.views.ContentBlockLinearLayout
                 android:id="@+id/brands_block"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -346,9 +346,9 @@
                     android:textColor="#3b518b"
                     android:textSize="14sp"
                     android:textStyle="normal" />
-            </com.ddscanner.ui.views.ContentBlockLayout>
+            </com.ddscanner.ui.views.ContentBlockLinearLayout>
 
-            <com.ddscanner.ui.views.ContentBlockLayout
+            <com.ddscanner.ui.views.ContentBlockLinearLayout
                 android:id="@+id/change_password_block"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -371,6 +371,6 @@
                     android:textStyle="normal"
                     android:textAllCaps="true"
                     android:text="@string/change_password_edit" />
-            </com.ddscanner.ui.views.ContentBlockLayout>
+            </com.ddscanner.ui.views.ContentBlockLinearLayout>
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
