+ ContentBockRelativeLayout view with op and bottom dividers

--- a/trunk/ddscanner/app/src/main/res/values/attrs.xml
+++ b/trunk/ddscanner/app/src/main/res/values/attrs.xml
@@ -27,7 +27,11 @@
     <declare-styleable name="ContentBlockLinearLayout">
         <attr name="top_divider" format="boolean" />
         <attr name="bottom_divider" format="boolean" />
+    </declare-styleable>
 
+    <declare-styleable name="ContentBlockRelativeLayout">
+        <attr name="cbrl_top_divider" format="boolean" />
+        <attr name="cbrl_bottom_divider" format="boolean" />
     </declare-styleable>
 
 </resources>
